[gd_scene load_steps=3 format=2]

[ext_resource path="res://sprites/robot_assets_Jaspior.png" type="Texture" id=1]
[ext_resource path="res://Scripts/powerups.gd" type="Script" id=5]

[node name="powerups" type="Area2D"]
script = ExtResource( 5 )

[node name="shape" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -24.0236, 23.8817, -0.0850906, -24.4678, 23.3809, 23.7242 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
scale = Vector2( 0.375, 0.375 )
texture = ExtResource( 1 )
hframes = 2
vframes = 7
frame = 6

[node name="Sprite2" type="Sprite" parent="."]
rotation = -1.5708
scale = Vector2( 0.375, 0.375 )
texture = ExtResource( 1 )
hframes = 2
vframes = 7
frame = 4

[node name="Sprite3" type="Sprite" parent="."]
rotation = -1.5708
scale = Vector2( 0.375, 0.375 )
texture = ExtResource( 1 )
hframes = 2
vframes = 7
frame = 8

[node name="Sprite4" type="Sprite" parent="."]
rotation = -1.5708
scale = Vector2( 0.375, 0.375 )
texture = ExtResource( 1 )
hframes = 2
vframes = 7
frame = 3

[node name="Sprite5" type="Sprite" parent="."]
rotation = -1.5708
scale = Vector2( 0.375, 0.375 )
texture = ExtResource( 1 )
hframes = 2
vframes = 7
frame = 10

[connection signal="body_entered" from="." to="." method="_on_powerups_body_entered"]
